fix(front): words wrapping and styling for inline code; (#178)

--- a/dataans/public/css/notes/note.css
+++ b/dataans/public/css/notes/note.css
@@ -59,26 +59,28 @@
     padding: 0 0.2em 0 0.2em;
     border-radius: 0.2em;
 
-    background-color: var(--note-link-color);
-    color: var(--note-inline-background-color);
+    background-color: var(--note-inline-background-color);
+    color: var(--note-inline-code-text-color);
+
+    overflow-wrap: anywhere;
 }
 
 .inline-code:active {
-    background-color: var(--note-inline-background-color);
-    color: var(--note-text-color);
+    background-color: var(--note-inline-code-text-color);
+    color: var(--note-inline-background-color);
 }
 
 .note .quote {
     padding-left: 0.5em;
     border-left: 2px solid var(--note-quote-text-color);
     color: var(--note-quote-text-color);
-    font-size: 0.85em;
+    font-size: 0.9em;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
 }
 
 .note .text {
-    word-break: break-word;
+    /* word-break: break-word; */
     white-space: pre-wrap;
 }
 
